--- a/packages/pyxis-scss/src/scss/foundations/hiding.scss
+++ b/packages/pyxis-scss/src/scss/foundations/hiding.scss
@@ -21,6 +21,17 @@
   }
 }
 
+// Hide scrollbar
+@mixin hideScrollbar {
+  -ms-overflow-style: none;
+  overflow-y: scroll;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 // Create atom classes for hiding
 @mixin createAtoms() {
   @each $breakpointName, $breakpointValue in tokens.$breakpoints {
