--- a/packages/pyxis-scss/src/scss/components/index.scss
+++ b/packages/pyxis-scss/src/scss/components/index.scss
@@ -3,6 +3,7 @@
 @forward "buttons";
 @forward "forms";
 @forward "icons";
+@forward "link";
 @forward "loaders";
 @forward "message";
 @forward "modal";
