--- a/packages/pyxis-scss/src/scss/components/mixins.scss
+++ b/packages/pyxis-scss/src/scss/components/mixins.scss
@@ -7,9 +7,10 @@
 // @param {Bool} $inset - Positioning of focus
 // @param {Value} $offset - Offset size
 // @param {Value} $width - Width of focus
-@mixin focus($color, $inset: false, $offset: lib.rem(2px), $width: lib.rem(3px)) {
+// @param {Value} $opacity - Opacity oof outline
+@mixin focus($color, $inset: false, $offset: lib.rem(2px), $width: lib.rem(3px), $opacity: 0.4) {
   &:focus {
-    outline: $color solid $width;
+    outline: rgba($color, $opacity) solid $width;
     outline-offset: $offset;
 
     @include lib.onSafari {
