[DS-115]: [Pyxis Scss] Add new fixed container and create documentation in storybook (#138)

--- a/packages/pyxis-react/src/stories/utils/Table/Table.module.scss
+++ b/packages/pyxis-react/src/stories/utils/Table/Table.module.scss
@@ -28,6 +28,10 @@
   &:last-child {
     border-bottom: none;
   }
+
+  .wrapperSmall & {
+    @include pyxis.verticalPadding(2xs);
+  }
 }
 
 .cell {
