--- a/packages/pyxis-scss/src/scss/foundations/index.scss
+++ b/packages/pyxis-scss/src/scss/foundations/index.scss
@@ -13,4 +13,5 @@
 @forward "radius" hide createAtoms;
 @forward "spacings" hide createAtoms;
 @forward "typography" hide createAtoms, fontFaces, globalSettings;
+@forward "variables";
 @forward "zIndex";
