--- a/packages/pyxis-scss/src/scss/foundations/layout.scss
+++ b/packages/pyxis-scss/src/scss/foundations/layout.scss
@@ -1,5 +1,14 @@
 // Layout utilities used in Pyxis.
 
+// Generate position fixed coordinates
+@mixin absolute($top: 0, $right: 0, $bottom: 0, $left: 0) {
+  bottom: $bottom;
+  left: $left;
+  position: absolute;
+  right: $right;
+  top: $top;
+}
+
 // Generate position sticky coordinates
 @mixin sticky($top: 0, $right: 0, $bottom: 0, $left: 0) {
   bottom: $bottom;
