--- a/packages/pyxis-scss/src/scss/foundations/hiding.scss
+++ b/packages/pyxis-scss/src/scss/foundations/hiding.scss
@@ -47,3 +47,14 @@
     }
   }
 }
+
+// Screen reader only
+.screen-reader-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
