[DS-29]: [Pyxis Scss] Tooltip component (#143)

--- a/packages/pyxis-scss/src/scss/components/forms/controls/checkbox.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/controls/checkbox.scss
@@ -1,21 +1,11 @@
 @use "../../../foundations";
 @use "../../../lib";
-@use "../mixins";
+@use "../mixins" as formMixins;
 @use "../variables";
+@use "../../mixins";
 
 $_checkmarkIcon: "%3Csvg width='12' height='12' viewBox='0 0 12 12' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.4413 3.02222L3.78257 8.97764L1.55872 5.94636' fill='none' stroke='%%COLOR%%' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E";
 $_indeterminateIcon: "%3Csvg width='10' height='2' viewBox='0 0 10 2' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='-1' y='-5' width='12' height='12' fill='%%COLOR%%'/%3E%3C/svg%3E";
-
-// Add a background image with a proper color.
-//
-// @param {String} $image - An svg with '%%COLOR%%' placeholder
-// @param {Color} $color - Color name
-@mixin _backgroundImage($image, $color: neutralLight) {
-  $escapedColor: lib.stringReplace("#{foundations.color($color)}", "#", "%23");
-  $svg: lib.stringReplace($image, "%%COLOR%%", $escapedColor);
-
-  background-image: url("data:image/svg+xml,#{$svg}");
-}
 
 // Set background and border color.
 //
@@ -28,8 +18,8 @@ $_indeterminateIcon: "%3Csvg width='10' height='2' viewBox='0 0 10 2' fill='none
 
 .form-control__checkbox {
   @include foundations.radius(2xs);
-  @include mixins.fieldStateDefault;
-  @include mixins.controlDefault;
+  @include formMixins.fieldStateDefault;
+  @include formMixins.controlDefault;
   position: relative;
 
   &:checked:after,
@@ -45,14 +35,14 @@ $_indeterminateIcon: "%3Csvg width='10' height='2' viewBox='0 0 10 2' fill='none
   }
 
   &:checked:after {
-    @include _backgroundImage($_checkmarkIcon);
+    @include mixins.backgroundImage($_checkmarkIcon);
   }
 
   &:indeterminate {
     @include _color(actionBase);
 
     &:after {
-      @include _backgroundImage($_indeterminateIcon);
+      @include mixins.backgroundImage($_indeterminateIcon);
     }
 
     .form-control--error & {
@@ -65,11 +55,11 @@ $_indeterminateIcon: "%3Csvg width='10' height='2' viewBox='0 0 10 2' fill='none
     @include _color(neutral95, neutral85);
 
     &:checked:after {
-      @include _backgroundImage($_checkmarkIcon, neutral75);
+      @include mixins.backgroundImage($_checkmarkIcon, neutral75);
     }
 
     &:indeterminate:after {
-      @include _backgroundImage($_indeterminateIcon, neutral75);
+      @include mixins.backgroundImage($_indeterminateIcon, neutral75);
     }
   }
 }
