--- a/packages/pyxis-scss/src/scss/foundations/layout.scss
+++ b/packages/pyxis-scss/src/scss/foundations/layout.scss
@@ -1,4 +1,5 @@
 // Layout utilities used in Pyxis.
+@use "variables";
 
 // Generate position fixed coordinates
 @mixin absolute($top: 0, $right: 0, $bottom: 0, $left: 0) {
@@ -25,4 +26,11 @@
   position: fixed;
   right: $right;
   top: $top;
+}
+
+// Class for `html` tag when a fixed element is open.
+.scroll-locked {
+  overflow: hidden;
+  padding-right: variables.$scrollBarWidth;
+  touch-action: none;
 }
